updated .css for better reporting, added some new Scanner and Reporting capabilities

--- a/restsec-samples/src/main/resources/reporting/report.css
+++ b/restsec-samples/src/main/resources/reporting/report.css
@@ -16,3 +16,17 @@ body {
 .theme-showcase .navbar .container {
   width: auto;
 }
+
+/* edit beginning here */
+
+table {
+  table-layout: fixed;
+  width: 100%;
+}
+
+table td {
+  word-wrap: break-word;         /* All browsers since IE 5.5+ */
+  overflow-wrap: break-word;     /* Renamed property in CSS3 draft spec */
+}
+
+
